name:                aeson-commit
version:             0.1.0.0
synopsis:            Parse Aeson data with commitment
description:         Aeson parsers backtracks too much for some use cases.
                     The commit parser forbids backtracking for already committed parses.
license:             BSD3
author:              Cross Compass
maintainer:          viktor.kronvall@cross-compass.com
copyright:           2019 Cross Compass Ltd.
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:
    Data.Aeson.Commit
  default-language:
    Haskell2010
  hs-source-dirs:
    src
  build-depends:
      base
    , aeson
    , mtl
    , text
  ghc-options:
    -Wall
    -Wno-name-shadowing

test-suite tasty
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test/tasty
  other-modules:
    Data.Aeson.CommitTest
  build-depends:
      base
    , aeson
    , aeson-qq
    , aeson-commit
    , containers
    , hspec
    , mtl
    , some
    , tasty
    , tasty-hspec
    , text
    , transformers
  main-is: Main.hs
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -Wno-name-shadowing
